# spacetraders

./: .cursorrules  .env  Cargo.toml  README.md  SpaceTraders.json
spacetraders-api/: Cargo.toml  README.md
spacetraders-api/.openapi-generator/: FILES
spacetraders-api/docs/: DefaultApi.md  ExtractResources201ResponseData.md  FleetApi.md  GetSupplyChain200Response.md  GetSupplyChain200ResponseData.md  GetSupplyChain200ResponseDataExportToImportMap.md
spacetraders-api/src/apis/: default_api.rs  fleet_api.rs  mod.rs  systems_api.rs
spacetraders-api/src/models/: create_chart_201_response_data.rs  extract_resources_201_response_data.rs  get_supply_chain_200_response.rs  get_supply_chain_200_response_data.rs  get_supply_chain_200_response_data_export_to_import_map.rs  market.rs  mod.rs  refuel_ship_200_response_data.rs  ship_frame.rs  ship_type.rs  shipyard.rs  shipyard_transaction.rs  system.rs  system_waypoint.rs  trade_symbol.rs
src/: client.rs  main.rs  ui.rs
