[package]
name = "spacetraders"
version = "0.1.0"
edition = "2021"
description = "A Space Traders API client implementation in Rust"
authors = ["MONKEYCODER"]

[dependencies]
tokio = { version = "1.36", features = ["full"] }  # Async runtime
reqwest = { version = "0.11", features = ["json"] }  # HTTP client
serde = { version = "1.0", features = ["derive"] }  # Serialization
serde_json = "1.0"  # JSON handling
dotenv = "0.15"  # Environment variable management
anyhow = "1.0"  # Error handling
log = "0.4"  # Logging
env_logger = "0.11"  # Logging implementation
colored = "2.1"  # Colorful terminal output
console = "0.15"  # Terminal styling utilities
spacetraders-api = { path = "./spacetraders-api" }
